--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -84,6 +84,7 @@
     <Compile Include="utility\filtering\PropertyAccessor.cs" />
     <Compile Include="utility\filtering\MatchFactory.cs" />
     <Compile Include="utility\filtering\PropertyMatch.cs" />
+    <Compile Include="utility\IntExtensions.cs" />
     <Compile Include="utility\ranges\IContainValues.cs" />
   </ItemGroup>
   <ItemGroup>
